Added files and changes required for deployment to heroku

--- a/django-social/social/dwitter/templates/base.html
+++ b/django-social/social/dwitter/templates/base.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <title>Dwitter</title>
+    <style>
+    label, input {
+        display: block;
+    }
+    span.helptext {
+        display: none;
+    </style>
+
 </head>
 <body>
     <a href="{% url 'dwitter:dashboard' %} ">
+
     <section class="hero is-small is-success mb-4">
         <div class="hero-body">
             <h1 class="title is-1">Dwitter</h1>
