--- a/django-social/social/dwitter/templates/dwitter/dashboard.html
+++ b/django-social/social/dwitter/templates/dwitter/dashboard.html
@@ -33,8 +33,8 @@
 
     <div class="block">
         <div class="block">
-            <h2 class="title is-2">Add a Dweet</p>
-        </div>
+             <p>class="title is-2">Add a Dweet</p>
+         </div>
         <div class="block">
             <form method="post">
                 {% csrf_token %}
